UPCOMING

	* Several breaking changes, mostly to character sets and properties

	* Changed handling of sets (a.k.a. character classes or "bracket expressions")
	  - see PR #55 / issue #47 for details
	  - sets are now parsed to expression trees like other nestable expressions
	  - #scan now emits the same tokens as outside sets (no longer :set, :member)
	  - CharacterSet#members has been removed
	  - new Range and Intersection classes represent corresponding syntax features
	  - a new PosixClass expression class represents e.g. [[:ascii:]]
	    - PosixClass instances behave like Property ones, e.g. support #negative?
	    - #scan emits :(non)posixclass, :<type> instead of :set, :char_(non)<type>
	* Changed Expression emissions for some escape sequences
	  - EscapeSequence::Codepoint, CodepointList, Hex and Octal are now all used
	  - they already existed, but were all parsed as EscapeSequence::Literal
	  - e.g. \x97 is now EscapeSequence::Hex instead of EscapeSequence::Literal
	* Changed naming of many property tokens (emitted for \p{...})
	  - if you work with these tokens, see PR #56 for details
	  - e.g. :punct_dash is now :dash_punctuation
	* Changed (?m) and the likes to emit as :options_switch token (@4ade4d1)
	  - allows differentiating from group-local :options, e.g. (?m:.)
	* Changed name of Backreference::*NestLevel to *RecursionLevel (@4184339)
	* Changed Backreference::Number#number from String to Integer (@40a2231)

	* Fixed ruby version mapping of some properties
	* Fixed scanning of some property spellings, e.g. with dashes
	* Fixed some incorrect property alias normalizations
	* Fixed scanning of codepoint escapes with 6 digits (e.g. \u{10FFFF})
	* Fixed scanning of \R and \X within sets; they act as literals there

	* Added support for all previously missing properties (about 250)
	* Added Expression::UnicodeProperty#shortcut (e.g. returns 'm' for '\p{mark}')
	* Added #char(s) and #codepoint(s) methods to all EscapeSequence expressions